set new params in pod