@@ -10,9 +10,12 @@ fi
 
 cd /app
 
+export MALLOC_ARENA_MAX=2
+
 time -p java \
     -server \
     -XX:MaxRAMPercentage=70 -XX:MinRAMPercentage=70 \
+    --add-opens java.base/java.util.concurrent=ALL_UNNAMED \
     -jar app.jar \
     all \
     /data/in/csse_covid_19_data/csse_covid_19_daily_reports \
